--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ html,body{
     aspect-ratio: 1/1;
     display: flex;
     flex-direction: column;
+    background-color: white;
     border-radius: 10px;
     box-shadow: 0px 2px 17px 4px rgba(0,0,0,0.75);
     -webkit-box-shadow: 0px 2px 17px 4px rgba(0,0,0,0.75);
