--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 html,body{
     margin: 0;
-    height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #FFCFEF;
 }
 
 #title{
@@ -32,7 +32,7 @@ html,body{
     align-items: center;
     width: 100%;
     height: 80%;
-    background-color: #FFCFEF;
+    padding: 20px;
 }
 
 .bigGap{
@@ -53,9 +53,10 @@ html,body{
 }
 
 #grid{
-    width: 30%;
+    width: 40%;
     aspect-ratio: 1/1;
     display: flex;
+    background-color: white;
     flex-direction: column;
     border-radius: 10px;
     box-shadow: 0px 2px 17px 4px rgba(0,0,0,0.75);
@@ -93,4 +94,15 @@ html,body{
 
 #reset-button:hover{
     cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+    .center{
+        flex-direction: column;
+        height: 100%;
+        padding: 10px;
+    }
+    #grid{
+        width: 80vw;
+    }
 }
