--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 html,body{
     margin: 0;
+    padding: 0;
     width: 100%;
+    height: 100%;
+    text-align: center;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
     background-color: #FFCFEF;
+    gap: 20px;
 }
 
 #title{
@@ -14,8 +16,6 @@ html,body{
     color:  #333;
     margin: 0;
     background-color: #FFCFEF;
-    width: 100%;
-    height: 20%;
 }
 
 .center input{
@@ -31,7 +31,8 @@ html,body{
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 80%;
+    flex: 1;
+    box-sizing: border-box;
     padding: 20px;
 }
 
@@ -66,7 +67,6 @@ html,body{
 }
 
 #settings{
-    text-align: center;
     aspect-ratio: 1/1;
     border-radius: 10px;
     padding: 10px;
@@ -79,7 +79,6 @@ html,body{
 
 #settings div{
     display: flex;
-    align-items: center;
     justify-content: space-between;
 }
 
@@ -95,4 +94,14 @@ html,body{
 
 #reset-button:hover{
     cursor: pointer;
+}
+
+@media screen and (max-width: 800px) {
+
+    .center{
+        flex-direction: column;
+    }
+    #grid{
+        width: 80%;
+    }
 }
